--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css"
     />
     <!-- <link rel="stylesheet" href="styles.css"> -->
-    <link rel="stylesheet" href="styles2.css">
-  <title>FETCH WEATHER APP</title>
+    <link rel="stylesheet" href="styles.css">
+  <title>LOCAL WEATHER APP</title>
 </head>
 <body>
   
@@ -38,14 +38,7 @@
   <section class="">
     <div class="">
       <div class="container">
-        <!-- <h1 class="title">
-          Monterey Weather App
-        </h1>
-        <form action="">
-          <h3>Enter the city below to get the weather forecast</h3>
-          <input type="text" placeholder="Location">
-          <button>Search</button>
-        </form> -->
+     
         <p id="message-one"></p>
         <p id="message-two"></p>
       </div>
@@ -57,8 +50,6 @@
     <div id="root"></div>
   </div>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="app2.js"></script>
-  <!-- <script src="cityData.js"></script>
-  <script src="cityForecast.js"></script> -->
+  <script src="app.js"></script>
 </body>
 </html>
