--- a/static/index.html
+++ b/static/index.html
@@ -14,9 +14,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css"
     />
-    <!-- <link rel="stylesheet" href="styles.css"> -->
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="media-queries.css">
+    <!-- <link rel="stylesheet" href="styles.css"> TEST -->
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./media-queries.css">
   <title>LOCAL WEATHER APP</title>
 </head>
 <body>
@@ -52,7 +52,7 @@
     <div id="root"></div>
   </div>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="../weather.js"></script>
+  <script src="./weather.js"></script>
 
 </body>
 </html>
