--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css"
     />
-    <!-- <link rel="stylesheet" href="styles.css"> -->
-    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="styles.css"> TEST -->
+    <link rel="stylesheet" href="./static/styles.css">
+    <link rel="stylesheet" href="./static/media-queries.css">
   <title>LOCAL WEATHER APP</title>
 </head>
 <body>
@@ -51,7 +52,7 @@
     <div id="root"></div>
   </div>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="./weather.js"></script>
-  <script src="app.js"></script>
+  <script src="./static/weather.js"></script>
+  <script src="./app.js"></script>
 </body>
 </html>
