--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119574573-4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-119574573-4');
+</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -14,7 +22,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css"
     />
-    <!-- <link rel="stylesheet" href="styles.css"> TEST -->
+    <!-- <link rel="stylesheet" href="styles.css"> WHICH -->
     <link rel="stylesheet" href="./static/styles.css">
     <link rel="stylesheet" href="./static/media-queries.css">
   <title>LOCAL WEATHER APP</title>
@@ -31,7 +39,7 @@
     <label for="from">
       <i class="ion-location"></i>
     </label>
-    
+    <h1>WEATHER</h1>
     <input type="search" placeholder="Enter a location for the forecast">
     <input type="submit" value="Search">
   </form>
