--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119574573-4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-119574573-4');
+</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -14,10 +22,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css"
     />
-    <!-- <link rel="stylesheet" href="styles.css"> TEST -->
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./media-queries.css">
-  <title>LOCAL WEATHER APP</title>
+  <title>LOCAL WEATHER APP!|</title>
 </head>
 <body>
   
@@ -31,7 +38,7 @@
     <label for="from" class="formLabel">
       <i class="ion-location"></i>
     </label>
-    
+   
     <input type="search" class="searchField" placeholder="Enter a location for the forecast">
     <input type="submit" class="submit" value="Search">
   </form>
