--- a/static/index.html
+++ b/static/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   
-  
+  <header></header>
   <div class="cover">
     <div class="title-container">
       <div class="back-title">
