Finish grid display

--- a/static/index.html
+++ b/static/index.html
@@ -58,6 +58,93 @@
     <div id="target"></div>
     <div id="root"></div>
   </div>
+
+  <!-- new content -->
+  <div class="container">
+    <div class="bg1 hidden">
+      <h2 ><span id="temp-min">16 </span> <span>| </span><span id="temp-max"> 24</span></h2>
+      <p id="week-summary">Local Weather</p>
+    </div>
+    <div class="bg1 hidden">
+      <h2><i class="fas fa-battery-three-quarters"></i></h2>
+      <p>Air Quality</p>
+      <p id="air-quality">50 - Medium</p>
+    </div>
+    <div class="bg2 hidden">
+      <!-- <h2><i class="fas fa-running"></i></h2> -->
+      <p id="dew-point">Dew Point</p>
+      <p>Dew Point</p>
+    </div>
+    <div class="bg1 hidden">
+      <p>Forecast Today</p>
+      <h2 id="forecast-today">36 &deg;</h2>
+      
+    </div>
+    <div class="bg1 hidden">
+      <h2><i class="fas fa-bed"></i></h2>
+      <p>Forecast Tomorrow</p>
+      <p id="forecast-tomorrow">36</p>
+    </div>
+    <div class="bg2 hidden" id="pollenCounts">
+      <div class="tree">
+        <h2 id="tree">98 <span></span></h2>
+        <p>Tree</p>
+      </div>
+      <div class="ragweed">
+        <h2 id="ragweed">98 <span></span></h2>
+        <p>Ragweed</p>
+      </div>
+      <div class="mold">
+        <h2 id="mold">98 <span></span></h2>
+        <p>Mold</p>
+      </div>
+      <div class="grass">
+        <h2 id="grass">98 <span></span></h2>
+        <p>Grass</p>
+      </div>
+    </div>
+    <div class="bg1 hidden">
+      <h2 id="current-temp">170 <span>lbs</span></h2>
+      <p>Current Temp</p>
+    </div>
+    <div class="bg1 hidden">
+      <h2 id="humidity">28 </h2><span>%</span>
+      <p>Humidity</p>
+    </div>
+    <div class="bg2 hidden" id="sunrise-sunset">
+      <div class="sunrise">
+        <h2 id="sunrise">118 <span></span></h2>
+        <p>Sunrise</p>
+      </div>
+      <div class="sunset">
+        <h2 id="sunset">118 <span></span></h2>
+        <p>Sunset</p>
+      </div>
+    </div>
+    <div class="bg2 hidden" id="wind-speeds">
+      <div >
+        <h2 id="wind-speed">680 <span></span></h2>
+        <p>Wind Speed</p>
+      </div>
+      <div >
+        <h2 id="wind-gust">680 <span></span></h2>
+        <p>Wind Gust</p>
+      </div>
+      <div >
+        <h2 id="wind-gust-time">680 <span></span></h2>
+        <p>Wind Gust Time</p>
+      </div>
+    </div>
+    <div class="bg2 hidden">
+      <!-- <h2><i class="fas fa-dumbbell"></i></h2> -->
+      <h2 id="visibility">85 <span></span></h2>
+      <p>Visibility</p>
+    </div>
+    <div class="bg2 hidden">
+      <h2 id="ozone">85 <span></span></h2>
+      <p>Ozone</p>
+    </div>
+  </div>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="./weather.js"></script>
 
