--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119574573-4"></script>
@@ -22,7 +22,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css"
     />
-    <!-- <link rel="stylesheet" href="styles.css"> WHICH -->
     <link rel="stylesheet" href="./static/styles.css">
     <link rel="stylesheet" href="./static/media-queries.css">
   <title>LOCAL WEATHER APP</title>
@@ -63,4 +62,4 @@
   <script src="./static/weather.js"></script>
   <script src="./app.js"></script>
 </body>
-</html>
+</html> -->
